@@ -1972,6 +1972,18 @@ name|contains
 argument_list|(
 literal|"64"
 argument_list|)
+operator|||
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"os.arch"
+argument_list|)
+operator|.
+name|contains
+argument_list|(
+literal|"s390x"
+argument_list|)
 decl_stmt|;
 DECL|field|aix
 specifier|private
